# otus2

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-single-platform.yml
include/: AngularVelocity.h  Direction.h  Error.h  IMovableObject.h  IProperty.h  IRotatableObject.h  MovableObjectAdapter.h  Movement.h  Point.h  RotatableObjectAdapter.h  Rotation.h  UObject.h  Velocity.h
src/: Error.cpp
tests/: CMakeLists.txt  main.cpp  movement.cpp  rotation.cpp
